# GTK-Paint

./: .gitignore  BUILD_FIXED.md  CMakeLists.txt  Makefile  PFL  README.md  install-deps.sh  run.sh
asserts/: PFL.css  PFL.glade
include/: PFL.h
src/: Color_buttons.c  Drawing_events.c  globals.c  main.c  menu_events.c
